--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -109,3 +109,8 @@ input[type="submit"], input[type="button"] {
 input[type="submit"]:hover, input[type="button"]:hover {
   background-color: #688bb0;
 }
+#clock{
+  color: #0071D0;
+  font-weight: bold;
+  font-size: 20px;
+}
